--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,9 +9,13 @@ on:
     branches: [ "test2" ]
   pull_request:
     branches: [ "test2" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      dry-run:
+        description: 'Set to true to list unused volumes, false to delete them'
+        required: true
+        default: 'true'
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
