--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,10 +5,6 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "test2" ]
-  pull_request:
-    branches: [ "test2" ]
   workflow_dispatch:
     inputs:
       dry-run:
@@ -31,10 +27,12 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
+        if: ${{ github.event.inputs['dry-run'] == 'true' }}
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        if: ${{ github.event.inputs['dry-run'] == 'false' }}
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
