--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,10 @@ on:
       dry-run:
         description: 'Set to true to list unused volumes, false to delete them'
         required: true
+        type: choice
+        options: 
+        - 'true'
+        - 'false'
         default: 'true'
 
 
@@ -26,13 +30,13 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Running DRY MODE
         if: ${{ github.event.inputs['dry-run'] == 'true' }}
-        run: echo Hello, world!
+        run: echo Below EBS volume will delete!!!!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: DELETING Actual data
         if: ${{ github.event.inputs['dry-run'] == 'false' }}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo Deleting vol-3xtrxdt4frd,
+          echo Deleting sna-076uftudhrcg.
