--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,13 +30,14 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Running DRY MODE
+      - name: Run list-unused-volumes.sh if dry-run is true
         if: ${{ github.event.inputs['dry-run'] == 'true' }}
-        run: echo Below EBS volume will delete!!!!
+        run: |
+          chmod +x a.sh
+          ./a.sh
 
-      # Runs a set of commands using the runners shell
-      - name: DELETING Actual data
+      - name: Run delete-unused-volumes.sh if dry-run is false
         if: ${{ github.event.inputs['dry-run'] == 'false' }}
         run: |
-          echo Deleting vol-3xtrxdt4frd,
-          echo Deleting sna-076uftudhrcg.
+          chmod +x b.sh
+          ./b.sh
